--- a/ckanext/tess/templates/snippets/search_form.html
+++ b/ckanext/tess/templates/snippets/search_form.html
@@ -56,7 +56,15 @@
               {%- if facets.translated_fields and facets.translated_fields.has_key((field,value)) -%}
                 {{ facets.translated_fields[(field,value)] }}
               {%- else -%}
-                {{ h.list_dict_filter(search_facets_items, 'name', 'display_name', value) }}
+                {% set name = h.list_dict_filter(search_facets_items, 'name', 'display_name', value) %}
+                {% if field == 'node_id' : %}
+                    {% set parts = name.split('-') %}
+                    {% for part in parts %}
+                        {{part.capitalize()}}
+                    {% endfor %}
+                {% else %}
+                    {{ name }}
+                {% endif %}
               {%- endif %}
               <a href="{{ facets.remove_field(field, value) }}" class="remove" title="{{ _('Remove') }}"><i class="icon-remove"></i></a>
             </span>
