--- a/ckanext/tess/templates/package/search.html
+++ b/ckanext/tess/templates/package/search.html
@@ -15,7 +15,7 @@
       {% endblock %}
 
 {% block secondary_content %}
-{# Reorder facets so that 'ELIXIR Nodes' (with internal key 'vocab_elixir_nodes') comes second after 'Content Provider' #}
+{# Reorder facets so that 'ELIXIR Nodes' (with internal key 'node_id') comes second after 'Content Provider' #}
 <div class="filters">
   <div>
     {% set facet_keys, facet_values = h.tess_reorder_dataset_facets(c.facet_titles.keys(), c.facet_titles.values()) %}
