--- a/ckanext/tess/templates/snippets/new_node_prompt.html
+++ b/ckanext/tess/templates/snippets/new_node_prompt.html
@@ -3,7 +3,7 @@
 <div class="module module-narrow module-shallow context-info">
     <h2 class="module-heading"><div class="icon-elixir"></div> {{ _('ELIXIR Node') }}</h2>
     <section class="module-content">
-        <div class="empty">Not attributed to any ELIXIR Node.</div>
+        <div class="empty">Not attributed to any ELIXIR node.</div>
     </section>
 </div>
 {% endblock %}
