--- a/ckanext/tess/templates/snippets/node.html
+++ b/ckanext/tess/templates/snippets/node.html
@@ -9,15 +9,15 @@
 
         {% block image %}
             {% if logo_link %}
-            <div class="image">
-                <a href={{url}}>
+            <div class="image img-circle">
+                <a href="{{url}}">
                    <img src="{{logo_link}}"
-                     alt="{{ node.get('display_name') }}">
+                     alt="{{ node.get('display_name') }}" style="max-height:60px;">
                 </a>
             </div>
             {% endif %}
         {% endblock %}
-        <a href={{url}} style="text-align:center">
+        <a href="{{url}}">
             <h1 class="heading">{{ node.get('display_name') }}</h1>
         </a>
     </section>
