--- a/ckanext/tess/templates/snippets/organization.html
+++ b/ckanext/tess/templates/snippets/organization.html
@@ -20,7 +20,7 @@ Example:
   {% block info %}
   <div class="module module-narrow module-shallow context-info">
     {% if has_context_title %}
-      <h2 class="module-heading"><i class="icon-building"></i> {{ _('Content provider') }}</h2>
+      <h2 class="module-heading"><i class="icon-building"></i> {{ _('Content Provider') }}</h2>
     {% endif %}
     <section class="module-content">
       {% block image %}
