Added an option to undelete an ELIXIR node.

--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -55,6 +55,18 @@
     {% set is_url = data.image_url and data.image_url.startswith('http') %}
     {{ form.image_upload(data, errors, is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }}
 
+    {% if data.id and h.check_access('group_delete', {'id': data.id}) and data.state != 'active' %}
+    <div class="control-group">
+        <label for="field-state" class="control-label">{{ _('State') }}</label>
+        <div class="controls">
+            <select id="field-state" name="state">
+                <option value="active" {% if data.get('state', 'none') == 'active' %} selected="selected" {% endif %}>{{ _('Active') }}</option>
+                <option value="deleted" {% if data.get('state', 'none') == 'deleted' %} selected="selected" {% endif %}>{{ _('Deleted') }}</option>
+            </select>
+        </div>
+    </div>
+    {% endif %}
+
   {% endblock %}
 
   {% block custom_fields %}
@@ -121,4 +133,5 @@
     {% endblock %}
     <button class="btn btn-primary" name="save" type="submit">{% block save_text %}{{ _('Save node') }}{% endblock %}</button>
   </div>
+
 </form>
