--- a/ckanext/tess/templates/node/snippets/node_list_dropdown.html
+++ b/ckanext/tess/templates/node/snippets/node_list_dropdown.html
@@ -1,8 +1,8 @@
 <!--div class="content"-->
 {% block about %}
 {% block header_site_navigation %}
-    <nav class="section navigation">
-    <div class="dropdown" style="padding-left:20px;padding-top:10px;">
+    <nav class="section navigation" style="max-width: 200px; padding-left:20px; float: left;">
+    <div class="dropdown">
      <a href="#" class="button image dropdown-toggle" data-toggle="dropdown">
          Nodes
          <i class="icon-chevron-down"></i>
