Styling for nodes pages.

--- a/ckanext/tess/templates/node/snippets/node_list_dropdown.html
+++ b/ckanext/tess/templates/node/snippets/node_list_dropdown.html
@@ -1,7 +1,7 @@
 <!--div class="content"-->
 {% block about %}
 {% block header_site_navigation %}
-    <nav class="section navigation" style="max-width: 200px; padding-left:20px; float: left;">
+    <nav class="section navigation">
     <div class="dropdown">
      <a href="#" class="button image dropdown-toggle" data-toggle="dropdown">
          Nodes
