Styled boxes of content for nodes pages and description box in header.

--- a/ckanext/tess/templates/node/snippets/materials_for_node.html
+++ b/ckanext/tess/templates/node/snippets/materials_for_node.html
@@ -13,5 +13,5 @@ hub - True if we're on the hub page and we need to have the header for each sect
     {% endfor %}
     </ul>
 {% else %}
-    <p class="module-content empty">No training materials found for this node</p>
+    <p class="module-content empty" style="padding: 0px; margin: 0px;">No training materials found for this node</p>
 {% endif %}
