--- a/ckanext/tess/templates/node/snippets/events_for_node.html
+++ b/ckanext/tess/templates/node/snippets/events_for_node.html
@@ -1,3 +1,3 @@
 <h2>Events</h2>
 <hr/>
-<p class="module-content empty">No events found for this node</p>
+<p class="module-content empty" style="padding: 0px; margin: 0px;">No events found for this node</p>
