--- a/ckanext/tess/templates/node/snippets/members_for_node.html
+++ b/ckanext/tess/templates/node/snippets/members_for_node.html
@@ -1,3 +1,3 @@
 <h2>Member institutions</h2>
 <hr/>
-<p class="module-content empty">No member institutions found for this node</p>
+<p class="module-content empty" style="padding: 0px; margin: 0px;">No institutions found for this node</p>
