--- a/ckanext/tess/templates/node/snippets/news_for_node.html
+++ b/ckanext/tess/templates/node/snippets/news_for_node.html
@@ -1,3 +1,3 @@
 <h2>News</h2>
 <hr/>
-<p class="module-content empty">No news found for this node</p>
+<p class="module-content empty" style="padding: 0px; margin: 0px;">No news found for this node</p>
