--- a/ckanext/tess/templates/node/snippets/node_template.html
+++ b/ckanext/tess/templates/node/snippets/node_template.html
@@ -20,9 +20,9 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
         <div style="float: left; padding: 20px;">
             {% snippet "node/snippets/node_list_dropdown.html" %}
         </div>
-        <div style="float: left;">
+        <div style="float: left; padding-left: 10px;">
             {% if country_code : %}
-                <img src="/images/node_flags/{{ country_code }}.png" class="img-circle" style="max-height: 60px; padding-left: 10px;"/>
+                <img id="flag" src="/images/node_flags/{{ country_code }}.png" class="img-circle" style="max-height: 60px;"/>
             {% endif %}
         </div>
         <div style="float: left; width: 60%;">
@@ -35,7 +35,7 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 
 {% block node_heading %}
 {% if node.get('description'): %}
-<div class="row-fluid" style="padding: 10px;">
+<div class="row-fluid" style="padding: 10px 20px;">
     <h3>Description</h3>
         {{ node.get('description') }}
 </div>
