--- a/ckanext/tess/templates/node/snippets/node_template.html
+++ b/ckanext/tess/templates/node/snippets/node_template.html
@@ -22,7 +22,7 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
         </div>
         <div style="float: left; padding-left: 10px;">
             {% if country_code : %}
-                <img id="flag" src="/images/node_flags/{{ country_code }}.png" class="img-circle" style="max-height: 60px;"/>
+                <img src="/images/node_flags/{{ country_code }}.png" class="img-circle" style="max-height: 60px;"/>
             {% endif %}
         </div>
         <div style="float: left; width: 60%;">
