--- a/ckanext/tess/templates/node/country_custom/IT.html
+++ b/ckanext/tess/templates/node/country_custom/IT.html
@@ -1,9 +1,6 @@
-{% set node_name = 'Czech Republic' %}
-{% set country_code = 'CZ' %}
-{% set trc = None %}
-{% set tec = None %}
-{% set hon = None %}
-{% extends "node_old/snippets/node_template.html", node_name=node_name, country_code=country_code, hon=hon, trc=trc, tec=tec %}
+{% set node_name = 'Italy' %}
+{% set country_code = 'IT' %}
+{% extends "node/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
