--- a/ckanext/tess/templates/node/read.html
+++ b/ckanext/tess/templates/node/read.html
@@ -7,7 +7,7 @@ If there is no custom file or country code, pass the name to node_template which
 {% if c.group_dict.has_key('country_code'): %}
     {% set country_code = c.group_dict['country_code'] %}
     {% set node_name = c.group_dict['title'] %}
-    {% set custom_file_path = 'node/' + country_code + ".html" %}
+    {% set custom_file_path = 'node/country_custom/' + country_code + ".html" %}
     {% set has_custom = h.file_exist(custom_file_path) %}
     {{ country_code }}
     {{c.group_dict}}
@@ -18,6 +18,7 @@ If there is no custom file or country code, pass the name to node_template which
     {% endif %}
 {% else: %}
     <p class="module-content empty">No such country</p>
+    {% snippet "node/snippets/node_template.html", node=c.group_dict %}
 {% endif %}
 
 
