--- a/ckanext/tess/templates/node/country_custom/NL.html
+++ b/ckanext/tess/templates/node/country_custom/NL.html
@@ -51,14 +51,12 @@ The blocks are listed below. Move them out of this comment bracket to override.
     <h2>Member Institutions</h2>
     <hr/>
     <div style="margin-left:auto; margin-right:auto; width:90%">
-        <a href="http://ww.dtls.nl/NL.html"><h3>Duth Techncentre for Life Sciences (DTL)</h3>
+        <a href="http://ww.dtls.nl/NL.html"><h3>Dutch Techncentre for Life Sciences (DTL)</h3>
             <img src="/images/nodes/nl/dtl.png"/></a>
     </div>
 </li>
 {% endblock %}
 
-{% block news %}
-{% endblock %}
 
 {% block staff %}
 <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
@@ -76,11 +74,5 @@ The blocks are listed below. Move them out of this comment bracket to override.
     <img src="/images/nodes/nl/hooft.jpg" style="max-height:100px" class="img-rounded"/>
     <a href='mailto: '>Rob Hooft</a>
 </li>
-{% endblock %}
-
-{% block events %}
-{% endblock %}
-
-{% block materials %}
 {% endblock %}
 
