--- a/ckanext/tess/templates/node/snippets/news_for_node.html
+++ b/ckanext/tess/templates/node/snippets/news_for_node.html
@@ -1,3 +1,16 @@
 <h2>News</h2>
 <hr/>
+{% set twitter_handle = node.get('twitter') %}
+{% if twitter_handle %}
+
+    <a class="twitter-timeline"
+        href="https://twitter.com/ElixirTess"
+        data-widget-id="575326025380425728"
+        data-screen-name="{{twitter_handle.replace('@', '')}}"
+    >
+    Tweets by {{twitter_handle}} </a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+{% else %}
 <p class="module-content empty" style="padding: 0px; margin: 0px;">No news found for this node</p>
+{% endif %}
