--- a/ckanext/tess/templates/node/country_custom/GB.html
+++ b/ckanext/tess/templates/node/country_custom/GB.html
@@ -9,6 +9,9 @@ The blocks are listed below. Move them out of this comment bracket to override.
 {% endblock %}
 {% block related_orgs %}
 {% endblock %}
+{% block news %}
+{% endblock %}
+
 #}
 
 
@@ -47,21 +50,9 @@ The blocks are listed below. Move them out of this comment bracket to override.
 </div>
 {% endblock %}
 
-{% block organizations %}
-<li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
-    <h2>Member institutions</h2>
-    <hr/>
-    <div style="margin-left:auto; margin-right:auto; width:90%">
-        <a href="http://www.ox.ac.uk/GB.html"><h3>The University of Oxford</h3>
-            <img src="/images/institutions/oxford.png" style="max-width: 120px;" /></a>
-        <a href="http://www.manchester.ac.uk/GB.html"><h3>The University of Manchester</h3>
-            <img src="/images/institutions/manchester.jpg" style="width: 120px;"/></a>
-    </div>
-</li>
-{% endblock %}
 
 {% block staff %}
-<li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
+<li class="media-item masonry-brick node-brick">
     <h2>Staff</h2>
     <hr/>
     <h4>Head of node</h4>
@@ -87,17 +78,15 @@ The blocks are listed below. Move them out of this comment bracket to override.
 </li>
 {% endblock %}
 
-{% block events %}
-{% endblock %}
-
-
-{% block news %}
-<li style="position: relative; top: 0px; left: 0px; width: 280px; height:700px; border: 1px solid #DDD;" class="media-item masonry-brick">
-    <h2>News</h2>
+{% block organizations %}
+    <li class="media-item masonry-brick node-brick">
+    <h2>Member institutions</h2>
     <hr/>
-    <div>
-        <a class="twitter-timeline" href="https://twitter.com/ElixirNodeUk" data-widget-id="559708972698308608">Tweets by @ElixirNodeUk</a>
+    <div style="margin-left:auto; margin-right:auto; width:90%">
+        <a href="http://www.ox.ac.uk/GB.html"><h3>The University of Oxford</h3>
+            <img src="/images/institutions/oxford.png" style="max-width: 120px;" /></a>
+        <a href="http://www.manchester.ac.uk/GB.html"><h3>The University of Manchester</h3>
+            <img src="/images/institutions/manchester.jpg" style="width: 120px;"/></a>
     </div>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</li>
+    </li>
 {% endblock %}
