--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -9,18 +9,18 @@
 <!--<li class="active"><a href="">Manage</a></li>-->
 <!--{% endblock %}-->
 
-{% if not action == 'new' %}
-{% block page_heading %}
-<div class="module-content page-header">
-        <div style="float: left; padding: 10px;">
-            <img src="/images/node_flags/{{ data.country_code}}.png" class="img-circle" style="max-height:60px;">
-        </div>
-        <div style="float: left; width: 60%;">
-            <h1 class="page-heading" style="text-align:center">{{data.get('title')}}</h1>
-        </div>
-</div>
-{% endblock %}
-{% endif %}
+<!--{% if not action == 'new' %}-->
+<!--{% block page_heading %}-->
+<!--<div class="module-content page-header">-->
+        <!--<div style="float: left; padding: 10px;">-->
+            <!--<img src="/images/node_flags/{{ data.country_code}}.png" class="img-circle" style="max-height:60px;">-->
+        <!--</div>-->
+        <!--<div style="float: left; width: 60%;">-->
+            <!--<h1 class="page-heading" style="text-align:center">{{data.get('title')}}</h1>-->
+        <!--</div>-->
+<!--</div>-->
+<!--{% endblock %}-->
+<!--{% endif %}-->
 
 <form class="dataset-form form-horizontal" method="post" data-module="basic-form" enctype="multipart/form-data">
   {% block error_summary %}
