--- a/ckanext/tess/templates/node/read_base.html
+++ b/ckanext/tess/templates/node/read_base.html
@@ -17,7 +17,7 @@
 <div class="module module-narrow module-shallow">
     <div class="module-content">
         <div class="image">
-            {% set node_link = h.link_for(c.group_dict.display_name|truncate(35), controller='ckanext.tess.controller:NodeController', action='read', id=c.group_dict.name) %}
+            {% set node_link = h.url_for(c.group_dict.type ~ '_read', action='read', id=c.group_dict.name) %}
             {% set country_code = c.group_dict.country_code %}
           <a href="{{node_link}}">
             <img class="img-circle" src="/images/node_flags/{{country_code}}.png" alt="{{c.group_dict.display_name}}">
