--- a/ckanext/tess/templates/node/new.html
+++ b/ckanext/tess/templates/node/new.html
@@ -2,16 +2,20 @@
 
 {% block subtitle %}{{ _('Create node') }}{% endblock %}
 
-{% block breadcrumb_link %}{{ h.nav_link(_('Create node'), controller='node', action='edit', id=c.organization.name) }}{% endblock %}
+{# block breadcrumb_link %}{{ h.nav_link(_('Create node'), controller='node', action='edit', id=c.organization.name) }}{% endblock #}
+
+{% block breadcrumb_content %}
+  <li>{% link_for _('Nodes'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
+  <li class="active">{% link_for 'Create node', controller='ckanext.tess.controller:NodeController', action='new' %}</li>
+{% endblock %}
 
 {% block page_heading %}{{ _('Create node') }}{% endblock %}
 
 {% block page_header %}{% endblock %}
 
-{{ h.get_all_nodes() }}
-{% block breadcrumb_content_inner %}
+{# block breadcrumb_content_inner %}
   <li class="active"><a href="#">{{ _('Create node') }}</a></li>
-{% endblock %}
+{% endblock #}
 
 {% block secondary_content %}
   {% snippet "node/snippets/helper.html" %}
