--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -69,11 +69,23 @@
 
     {{ form.input('hon', label=_('Head of node'), id='hon', placeholder=('Name of the head of node'), value=data.hon, classes=['control-medium']) }}
     {{ form.input('hon_email', label=_("Head of node's email"), id='hon_email', placeholder=('Email address of the head of node'), value=data.hon_email, classes=['control-medium']) }}
+    {% set is_upload = data.hon_image and not data.hon_image.startswith('http') %}
+    {% set is_url = data.hon_image and data.hon_image.startswith('http') %} 
+    {{ form.image_upload(data, errors, field_url="hon_image", url_label="Head of node's image", is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }} 
+
     {{ form.input('trc', label=_('Training coordinator'), id='trc', placeholder=('Name of the training coordinator'), value=data.trc, classes=['control-medium']) }}
     {{ form.input('trc_email', label=_("Training coordinator's email"), id='trc_email', placeholder=('Email address of the training coordinator'), value=data.trc_email, classes=['control-medium']) }}
+    {% set is_upload = data.trc_image and not data.trc_image.startswith('http') %}
+    {% set is_url = data.trc_image and data.trc_image.startswith('http') %} 
+    {{ form.image_upload(data, errors, field_url="trc_image", url_label="Training coordinator's image", is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }} 
+
     {{ form.input('tec', label=_('Technical coordinator'), id='tec', placeholder=('Name of the technical coordinator'), value=data.tec, classes=['control-medium']) }}
     {{ form.input('tec_email', label=_("Technical coordinator's email"), id='tec_email', placeholder=('Email address of the technical coordinator'), value=data.tec_email, classes=['control-medium']) }}
-    {{ form.input('twitter', label=_("Twitter handle"), id='twitter', placeholder=("Handle of the node's twitter feed e.g @ElixirNodeUK"), value=data.twitter, classes=['control-medium']) }}
+    {% set is_upload = data.tec_image and not data.tec_image.startswith('http') %}
+    {% set is_url = data.tec_image and data.tec_image.startswith('http') %} 
+    {{ form.image_upload(data, errors, field_url="tec_image", url_label="Technical coordinator's image", is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }} 
+
+    {{ form.input('twitter', label=_("Twitter handle"), id='twitter', placeholder=("Handle of the node's twitter feed, e.g @ElixirNodeUK"), value=data.twitter, classes=['control-full']) }}
 
     <div class='controls'><p>Add up to three images for the node page's carousel.</p></div>
     {% set carousel_images = [] %}
